# tello-node-stack

./: .gitignore  README.md  requirements.txt
controller_interface/: CMakeLists.txt  README.md  package.xml
controller_interface/launch/: controller.launch  pid_controller.launch  rviz.launch
controller_interface/rviz/: config.rviz
controller_interface/scripts/: interpolation.py  menu.py  navigation.py  waypoints.py
controller_interface/src/: interface.cpp  path_visualization.cpp
controller_interface/srv/: set_reference.srv
image_undistort/: CMakeLists.txt  README.md  nodelet_plugins.xml  package.xml
image_undistort/cfg/: tello.yaml
image_undistort/include/image_undistort/: undistorter.h
image_undistort/launch/: tello_undistort.launch  thesis_tello_undistort.launch
image_undistort/scripts/: grayscale_to_three_channel.py  make_split_file.py  rename_file.py  save_output_image.py
keyboard_teleop/: CMakeLists.txt  package.xml
keyboard_teleop/launch/: keyboard_teleop.launch
keyboard_teleop/src/: README.md  keyboard_teleop_node.py
misc/: install.sh  ros_noetic_install.sh
misc/ROS_noetic/: Dockerfile
orb_slam_2_ros/: Dependencies.md
orb_slam_2_ros/ros/launch/: orb_slam2_tello_mono.launch
tello/: CMakeLists.txt  package.xml  requirements.txt
tello/launch/: tello_driver_node.launch
tello/src/: tello_driver_node.py
tello_node/: .gitignore  CMakeLists.txt  README.md  package.xml
tello_node/bag/: record.sh
tello_node/cfg/: 960x720.yaml
tello_node/config/: 960x720.yaml
tello_node/launch/: tello_driver_node.launch  tello_keyboard.launch  tello_keyboard_teleop.launch  tello_orb.launch  tello_test.launch
tello_node/misc/: config.sh  ros_noetic_install.sh
tello_node/msg/: tello_status.msg
tello_node/src/: tello_driver_node.py
vo/: comparison.ipynb
